manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-app-service
spec:
  selector:
    app: grpc-app
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: http-mgmt
      port: 8081
      targetPort: 8081
  type: ClusterIP
